# LatentLearning

./: .gitignore  log.txt
configs/: gridworld1.json  gridworld2.json  twogrids.json
dp/: Makefile  dynamic_program.py  example_output  hall_output  state_metrics.cc  state_tables.h  test_output  trace_example  trace_to_tables.cc
driml_discrete/: .gitignore  Readme.md  setup.py  train_pacman.py
genIK/gridworld/: code_element.txt  exo_noise.ipynb  grid_to_int.txt  plot.py  plot.sh  repvis.py  run.sh  train_rep.py  utils.py  (+1 more)
gridworld/: gridworld1.py  gridworld2.py  gridworld_test.py  gridworld_wrapper.py
incremental_genIK/: det_tabular_mdp_builder.py  policies.py  train_rep_incremental.py  utils.py  value_iteration.py
lambgrid/: grid_4room_env.py  main.py  transition.py  value_iter.py
main/: buffer.py  encoder.py  grid_4room_builder.py  main.py
markov-state-abstractions-discrete/: .gitignore
matterport/: matterport.py  matterport_test.py
maze_task/: buffer.py  grid_4room_env.py  main.py  quantize.py  transition.py  value_iteration.py
mnist_twodigit/: buffer.py  encoder.py  env.py  grid_4room_builder.py  grid_4room_env.py  main.py  quantize.py  transition.py  utils.py  value_iteration.py
robots/: DOCKERFILE  README.md  box2d_simple.py  data_loader.ipynb  main.py  mujoco_example.py  pretrain.py  requirements.txt  robot_tests.ipynb
robots/mnist_two/: package.xml  setup.cfg  setup.py
robots/mnist_two/mnist_two/: encoder.py  env.py  grid_4room_builder.py  grid_4room_env.py  main.py  quantize.py  value_iteration.py
visualize/: interactive_visualizer.py
(+167 files in other folders)
